--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -8,16 +8,15 @@ on:
       #timezone: 'America/Los_Angeles' #apparently not existing, manually adjust
 
 jobs:
-  example-job:
+  # this workflow contains a single job called "run_python"
+  run_python:
     runs-on: ubuntu-latest  # Runs on GitHub-hosted Ubuntu
     steps:
-      #- name: Check out repository
-      #  uses: actions/checkout@v3
       
-      #- name: Set up Python
-      #  uses: actions/setup-python@v3
-      #  with:
-      #    python-version: 3.x  # Specify your desired Python version (e.g., 3.8 or 3.9)
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.11.0  # Specify your desired Python version (e.g., 3.8 or 3.9)
       
       - name: Run Python script
         run: python discord_sonicarebrush.py
